Responsividade iphonex html
footer > p > copyright

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				</aside>
 <!--************** Fim aside *************-->
 				<footer>
-					<p>
+					<p class="copyright">
 						<a href="#">Home</a>
 						<a href="#">Exposições</a>
 						<a href="#">Pesquisa</a>
